Adjusted JS Calculator app for readability by displaying the result on a newline and limiting length so there are no overflow issues. Added a slider for significant figures/how many decimal places are to be shown in the result.

--- a/sites/jscalc/style.css
+++ b/sites/jscalc/style.css
@@ -1,6 +1,7 @@
 * {
 	box-sizing: border-box;
 	text-align: center;
+	max-width: 100%;
 }
 
 main {
@@ -12,16 +13,13 @@ h1 {
 	margin: 20px auto;
 }
 
-h3 {
+h2 {
 	margin: 20px auto 0 auto;
-}
-
-small {
-	font-size: 0.7em;
+	padding-top: 20px;
 }
 
 #calculator {
-	font-size: 28px;
+	font-size: 1.5em;
 	margin: 0 auto;
 	padding-top: 20px;
 	width: 10em;
@@ -39,13 +37,13 @@ small {
 
 #answer {
 	float: left;
-	line-height: 3em;
-	text-align: right;
-	text-overflow: ellipsis;
-	overflow: hidden;
+	line-height: 2em;
 	width: 10em;
-	height: 3em;
+	height: 4em;
+	margin: 0 .5em;
 	padding-right: .5em;
+	word-wrap: break-word;
+	text-align: right;
 	border: 1px solid black;
 	margin: 20px auto 10px auto;
 	background-color: #eee;
@@ -72,5 +70,18 @@ button:focus {
 
 #backspace,
 #clear {
-	width: 45%;
+	width: 4.5em;
+}
+
+.clearfix {
+	clear: both;
+}
+
+.decimalSelector {
+	padding: 40px auto;
+}
+
+#sigFig {
+	height: 1em;
+	padding-bottom: 50px;
 }
